kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  annotations:
     nginx.ingress.kubernetes.io/rewrite-target: /api/$2
spec:
  rules:
    - http:
        paths:
          - path: /api/productores(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: productores-microservice
                port:
                  number: 8080
          - path: /api/consumidores(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: consumidores-microservice
                port:
                  number: 8080
          - path: /api/validadores(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: validadores-microservice
                port:
                  number: 8080
          - path: /api/ficheros(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: mongo-microservice
                port:
                  number: 8080
